--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "react": "^18.3.1",
+    "react-app-alias": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.5.0",
+    "@craco/craco": "^7.1.0",
     "@storybook/addon-essentials": "^8.1.9",
     "@storybook/addon-interactions": "^8.1.9",
     "@storybook/addon-links": "^8.1.9",
@@ -58,6 +60,7 @@
     "prop-types": "^15.8.1",
     "storybook": "^8.1.9",
     "tailwindcss": "^3.4.4",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.92.0"
   }
 }
