--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "clsx": "^2.1.1",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-app-alias": "^2.2.2",
