--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.10.8",
     "@cloudinary/react": "^1.13.0",
     "@cloudinary/url-gen": "^1.19.0",
+    "@hookform/resolvers": "^3.9.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -18,9 +19,11 @@
     "react": "^18.3.1",
     "react-app-alias": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "craco start",
