--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-app-alias": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
