--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^1.4.0"
