polising auth flow & header & localisation

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-app-alias": "^2.2.2",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
@@ -82,6 +83,7 @@
     "@storybook/react": "^8.1.9",
     "@storybook/react-webpack5": "^8.1.9",
     "@storybook/test": "^8.1.9",
+    "@types/react-helmet": "^6.1.11",
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.1.9",
